--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,8 @@
 # These are supported funding model platforms
 
 github: [devinschumacher]
-custom: [https://serp.ly/@boxingundefeated/sponsor]
+liberapay: devinschumacher
+open_collective: devinschumacher
+custom: [
+  https://boxingundefeated.com,
+]
