--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,10 +2,7 @@
 
 github: [devinschumacher]
 liberapay: devinschumacher
-open_collective: devinschumacher
+open_collective: boxingundefeated
 custom: [
   https://boxingundefeated.com,
-  https://serp.ai
-  https://devinschumacher.com
-  https://serp.co
 ]
